k8s/development/quota-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quota-manager
  namespace: suite-sync
  labels:
    app.kubernetes.io/name: quota-manager
    app.kubernetes.io/part-of: suite-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quota-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quota-manager
        app.kubernetes.io/part-of: suite-sync
    spec:
      containers:
        - name: quota-manager
          image: ghcr.io/trezor/suite-sync:main
          command: ["yarn", "start-quota-manager"]
          ports:
            - name: http
              containerPort: 4001
            - name: health
              containerPort: 4002
          readinessProbe:
            httpGet:
              path: /
              port: health
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: health
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: quota-manager
  namespace: suite-sync
  labels:
    app.kubernetes.io/name: quota-manager
    app.kubernetes.io/part-of: suite-sync
spec:
  selector:
    app.kubernetes.io/name: quota-manager
  ports:
    - name: http
      port: 4001
      targetPort: 4001
    - name: health
      port: 4002
      targetPort: 4002
