k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suite-sync-dev
  namespace: suite-sync-dev
  annotations:
    ingress.health.argocd.io/ip-not-requested: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "100"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  ingressClassName: nginx
  rules:
    - host: dev-suite-sync.suite.sldev.cz
      http:
        paths:
          - path: /evolu(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: evolu-relay
                port:
                  number: 4000
          - path: /quota-manager(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: quota-manager
                port:
                  number: 4001
